--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     // =========== CONFIG ===========
     // Replace with your public backend endpoint (Cloudflare Tunnel / API)
     // Example: const BACKEND_URL = "https://abc123.trycloudflare.com/chat";
-    const BACKEND_URL = "https://REPLACE_WITH_YOUR_BACKEND/chat";
+    const BACKEND_URL = "https://addition-mailto-motion-qty.trycloudflare.com/chat";
     // ==============================
 
     const messagesEl = document.getElementById('messages');
