--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<html>
 <!-- হ্যাকার স্টাইল চ্যাটবট -->
 <style>
     /* চ্যাটবট কন্টেইনার */
@@ -259,7 +260,7 @@
         }
     }
 </style>
-
+<body>
 <div class="chatbot-container" id="chatbotContainer">
     <div class="chatbot-toggle" id="chatbotToggle">
         <span style="font-size: 28px;">></span>
@@ -284,7 +285,7 @@
         </div>
     </div>
 </div>
-
+</body>
 <script>
     // চ্যাটবট লজিক
     document.addEventListener('DOMContentLoaded', function() {
@@ -512,3 +513,4 @@
         }, 2000);
     });
 </script>
+</html>
