--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<html>
 <!-- হ্যাকার-স্টাইল চ্যাটবট - সম্পূর্ণ ভার্সন -->
 <style>
     /* চ্যাটবট কন্টেইনার */
@@ -519,7 +520,7 @@
         justify-content: space-between;
     }
 </style>
-
+<body>
 <!-- নোটিফিকেশন এলিমেন্ট -->
 <div class="notification" id="chatNotification">
     <div style="display: flex; align-items: center; gap: 10px;">
@@ -584,7 +585,7 @@
 <audio id="matrixSound" preload="auto">
     <source src="https://assets.mixkit.co/sfx/preview/mixkit-computer-chip-alert-4004.mp3" type="audio/mpeg">
 </audio>
-
+</body>
 <!-- চ্যাটবট স্ক্রিপ্ট -->
 <script>
     // চ্যাটবট লজিক
@@ -1405,3 +1406,4 @@
         });
     });
 </script>
+</html>
